# Anomaly-detection-server

./: .gitignore  AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain  MainTrain.cpp  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  TimeSeries.cpp  TimeSeries.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  garbage.cpp  minCircle.cpp  minCircle.h  readfunctiontry.txt  test.cpp  timeseries.cpp  timeseries.h
